--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
+    "lodash": "^4.17.21",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +21,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
